assets/sass/main.scss
@import './variables';

body {
  font-family: "JetBrains Mono", monospace;
  color: $text-color;
  background-color: $bg;

  line-height: 1.5;
  margin: auto;
  max-width: $breakpoint-tablet;

  @media (max-width: $breakpoint-tablet) {
      margin: 0 1rem;
  }
}

.myself {
  display: flex;
  margin: 1rem 0;
  background-color: $bg-accent;
  border-radius: 4px;
  padding: 10px 10px;
  border: 1px solid $accent-color;

  @media (max-width: $breakpoint-tablet) {
    flex-direction: column;
    text-align: center;
  }

  ul {
    display: inline;
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  
  li {
    display: inline;
  }

  .avatar {
    display: flex;
  
    img {
      border-radius: 50%;
      width: auto;
      height: 10rem;
      border: 1px solid $accent-color;
    }
  }

  .socials {
    margin: 1rem;
  }

  .myself__left {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-right: 2rem;
  }

  .myself__right {
    display: flex;
    flex-direction: column;
  }
}

header {
  margin-bottom: 3rem;
  padding: 20px 0;

  #header__left {
    float: left;
  }
  
  #header__right {
    float: right;
  }

  ul {
    display: inline;
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  
  li {
    display: inline;
  }

}

footer {
  margin: 1rem 0;
}

a {
  color: $text-color;
  text-decoration: none;
}

article {
  border: 1px solid $accent-color;
  border-radius: 4px;
  margin-top: 1em;
  padding: 10px 10px;
}

img {
  display: block;
  margin: auto;
  max-height: 512px;
  width: 100%;
  object-fit: contain;
}

.img__container {
  background-color: #111;
  border-radius: 4px;
}

.button-link {
  background-color: $accent-color;
  color: $text-color;
  border-radius: 4px;
  max-width: 10rem;
  padding: 10px 10px;

  &:hover {
    background-color: $text-color;
    color: $accent-color;
  }
}

.fa:hover {
  color: $accent-color;
}

